--- a/package.json
+++ b/package.json
@@ -16,13 +16,17 @@
     "@types/react": "18.2.9",
     "@types/react-dom": "18.2.4",
     "autoprefixer": "10.4.14",
+    "date-fns": "^2.30.0",
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.4",
+    "html-react-parser": "^4.2.1",
+    "multer": "^1.4.5-lts.1",
     "next": "13.4.4",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.9.0",
+    "react-markdown": "^8.0.7",
     "react-quill": "^2.0.0",
     "supabase": "^1.68.6",
     "tailwindcss": "3.3.2",
