--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "multer": "^1.4.5-lts.1",
     "next": "13.4.4",
     "postcss": "8.4.24",
+    "quill": "^1.3.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.9.0",
